Fix webpage display

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         width: 125.5vh;
         border: none;
         height: 68.6%;
-        z-index: 99999;
-        display: block;
+        z-index: -1;
+        display: none;
         top: 0px;
         transform: rotate(-0.1deg);
         visibility: hidden;
